# Replicating-S4

./: README.md  main.py  pyproject.toml
.github/workflows/: pytest.yml
notebooks/: reccurent_ssm.py
src/: convolutional_ssm.py  generic_ssm.py  init_ssm.py  naive_kernel.py  recurrent_ssm.py  ssm_convolution.py
tests/: test_failing_test.py  test_mode_equiv.py  test_mode_function.py  test_ssm.py
