[project]
name = "replicating-s4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flax>=0.12.5",
    "icecream>=2.1.10",
    "ipykernel>=7.2.0",
    "ipynotebook>=0.1.0",
    "jupyter>=1.1.1",
    "pytest>=9.0.2",
    "pytest-clarity>=1.0.1",
    "pytest-sugar>=1.1.1",
]
[tool.pytest.ini_options]
pythonpath = [
  "src"
]
